# banking-concierge

./: DEMO.md  README.md  pyproject.toml
.github/workflows/: evals-on-pr.yml
evals/: dataset_golden.json  dataset_hallucinations.json  dataset_pii.json  dataset_snapshot.py  run_experiment.py
frontend/: package-lock.json  package.json
src/concierge/: context.py  context_hub.py  graph.py  mock_data.py  prompts.py  retrieval.py  tools.py
tests/: test_account_lookup_redaction.py
