[project]
name = "banking-concierge"
version = "0.1.0"
description = "Meridian National personal banking customer service concierge demo for LangSmith Engine"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.6.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langsmith>=0.8.5",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.3.15",
    "numpy>=1.26",
    "fastapi>=0.115",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/concierge"]
